# passworld

./: README.md  pyproject.toml
passworld/: commands.py  main.py
tests/: check_credentials.py
