[tool.poetry]
name = "passworld"
version = "0.1.0"
description = ""
authors = ["Nikita Vasiliev <nikita.vasiliev@math.msu.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
python-telegram-bot = "^20.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
